Adding tweet button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>MER ÖVERGÅNGSSTÄLLEN TILL FOLKET</title>
 </head>
 <body>
+<a href="https://twitter.com/home?status=MER%20%C3%96VERG%C3%85NGSST%C3%84LLEN%20TILL%20FOLKET%20https%3A//isakisreserv.github.io/Folket/">Share on Twitter</a>
   <h1> MER ÖVERGÅNGSSTÄLLEN TILL FOLKET </h1>
   <h1>
     <div id = ost> </div>
